<?xml version="1.0"?>

<package format="3">
  <name>gen3n7_description</name>
  <version>0.0.0</version>
  <description>Kinova Gen3 with Robotiq 85 Gripper</description>

  <maintainer email="shreyas.kumar@icloud.com">Shreyas Kumar</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>